# Lemuri-Media-Center

./: CMakeLists.txt  DEPENDENCIES
src/: AlbumInfo.cpp  AlbumInfo.h  AlbumModel.cpp  AlbumModel.h  BackgroundModel.cpp  BackgroundModel.h  CMakeLists.txt  CoverProvider.cpp  CoverProvider.h  DBusInterface.cpp  DBusInterface.h  GenreInfo.cpp  GenreInfo.h  GenreModel.cpp  GenreModel.h  IndexManager.cpp  IndexManager.h  IndexQuery.cpp  IndexQuery.h  IndexWorker.cpp  IndexWorker.h  KeyManager.cpp  KeyManager.h  MediaCenter.cpp  MediaCenter.h  MediaPlayer.cpp  MediaPlayer.h  MusicImporter.cpp  MusicImporter.h  PlayerAndModel.cpp  PlayerAndModel.h  ScreenSaver.cpp  ScreenSaver.h  TrackInfo.cpp  TrackInfo.h  TracksModel.cpp  TracksModel.h  application.qrc  filetyperesolver.cpp  filetyperesolver.h  (+6 more)
src/qml/: AlbumDelegate.qml  AlbumSelector.qml  AnimatedDialog.qml  ArtistSelector.qml  Background.qml  BarBackground.qml  ConfigGeneral.qml  ConfigUI.qml  Configuration.qml  FpsItem.qml  Frame.qml  GenresView.qml  LemuriMediaCenter.qml  Media.qml  MovieDelegate.qml  MoviesSelector.qml  MusicDelegate.qml  MusicsView.qml  Notifications.qml  PlayingBar.qml  ShortcutButton.qml  Video.qml  Volume.qml  main.qml
